--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
     <title>Guns N' Roses</title>
   </head>
   <body>
+      <header>
     <nav>
       <a href="https://www.gunsnroses.com" target="blank">Official Guns N' Roses Website</a>
       <a href="about.html">About Page</a>
     </nav>
+    </header>
+    <main>
       <h1>Welcome to the Jungle</h1>
-      <section id="lyrics">
+      <section class="lyrics">
         <h2>We've got fun and games</h2>
-        <img class="gnrimg" width="50%" src="https://media.giphy.com/media/Xpi6zhKv91eOWsQkn9/giphy.gif" alt="Guns N' Roses">
+        <img class="gnrlogo" src="https://media.giphy.com/media/Xpi6zhKv91eOWsQkn9/giphy.gif" alt="Guns N' Roses">
         <p>We got everything you want honey, we know the names
         <br>We are the people that can find whatever you may need
         <br>If you got the money, honey we got your disease</p>
       </section>
+    </main>
+    <footer>
+        <div class="fanmail"><p><em><strong>Send GNR a letter!</strong></em>
+        <p>Guns N' Roses
+        <br>Gundam Touring Services US, LLC
+        <br>5055 Latigo Canyon Rd
+        <br>Malibu, CA 90265-2812
+        <br>USA</font>
+        </div>
+    </footer>
   </body>
 </html>
